--- a/html_level1/me/styles/index.css
+++ b/html_level1/me/styles/index.css
@@ -1,3 +1,22 @@
-#mobile_wrap {background-color:#92FAFE;}
-#mobile_wrap img {}
-#mobile_wrap a {}
+#mobile_wrap {
+    background-color:#92FAFE;
+    width:440px; height:956px;
+    text-align:center;  
+}
+#mobile_wrap img {
+    margin-top:271px;
+    margin-bottom:56px;
+}
+#mobile_wrap a {
+    background-color:#297CDB;
+    width:183px; height:59px;
+    line-height:59px;
+    /* a태그에 가로세로 크기 입력시 적용이 안되는 이유는 a가 인라인요소기 때문 */
+    /* 위 해결법: a태그를 CSS속성을 이용하여 크기를 인식하는 block으로 변경 */
+    display:inline-block;
+    font-family:'Pretendard', sans-serif;
+    font-size:1.5em;
+    font-weight:600;
+    letter-spacing:0.02em;
+    border-radius:50px;
+}
