--- a/html_level1/w3schools/styles/main.css
+++ b/html_level1/w3schools/styles/main.css
@@ -4,17 +4,17 @@
     height:956px;
     padding-left:15px;
     padding-right:15px;
+    letter-spacing:0.02em;
 }
 .wrap h1 {
     margin-top:144px;
     margin-bottom:30px;
-    font-size:2.5rem;
-    font-weight:700;
+    font-size:2.5rem; /* 40px */
+    font-weight:700; /* bold */
 }
 .wrap > p {} /* wrap의 모든 자식을 가르키는 p */
 .wrap h1+p {
     margin-bottom:63px;
-    font-size:1rem;
     font-weight:500;
 }/* wrap의 h1바로 옆에 있는 p */
 .wrap #account {}
@@ -23,13 +23,20 @@
     font-weight:600;
 }
 .wrap #account p {}
+.wrap #account p .user_in {}
+.wrap #account p .user_button {}
+.wrap #account p input::placeholder{/* placeholder속성 선택자 작성법 */
+    font-size:0.875rem;
+    font-weight:300;
+}
 .wrap #account p input {
     width:410px;
-    height:44px;
     background-color:#B0C4DE;
-    font-size:1rem;
     border:1px solid #383969;
     padding-left:20px;
+    padding-right:20px;
+    padding-top:15px;
+    padding-bottom:15px;
     border-radius:5px;
     margin-top:25px;
     margin-bottom:60px;
@@ -37,7 +44,8 @@
 .wrap #account p #login_btn {
     background-color:#42488E; color:#fff;
     width:410px;
-    height:44px;
+    padding-top:15px;
+    padding-bottom:15px;
     margin-top:20px;
     margin-bottom:10px;
     border:1px solid #383969;
@@ -49,11 +57,11 @@
     text-align:center;
     background-color:#fff;
     width:410px;
-    height:44px;
+    padding-top:15px;
+    padding-bottom:15px;
     border:1px solid #383969;
     border-radius:5px;
     display:inline-block;
-    line-height:44px;
     font-size:0.875rem;
     font-weight:500;
 }
@@ -61,8 +69,9 @@
     margin-top:20px;
     font-size:0.75rem;
     font-weight:400;
+    text-align:center;
+    letter-spacing:0;
 }/* #wrap의 account옆에 p */
 .wrap #account+p a{
-    font-size:0.75rem;
     font-weight:600;
 }
