--- a/html_level1/w3schools/styles/main.css
+++ b/html_level1/w3schools/styles/main.css
@@ -2,19 +2,22 @@
     background-color:#fff;
     width:440px;
     height:956px;
-    padding-left:15px;
-    padding-right:15px;
+    padding:0 15px;
+    /* padding-left:15px;
+    padding-right:15px; */
     letter-spacing:0.02em;
 }
 .wrap h1 {
-    margin-top:144px;
-    margin-bottom:30px;
+    margin:144px 0 30px 0;
+    /* margin-top:144px;
+    margin-bottom:30px; */
     font-size:2.5rem; /* 40px */
     font-weight:700; /* bold */
 }
 .wrap > p {} /* wrap의 모든 자식을 가르키는 p */
 .wrap h1+p {
-    margin-bottom:63px;
+    margin: 0 0 63px 0;
+    /* margin-bottom:63px; */
     font-weight:500;
 }/* wrap의 h1바로 옆에 있는 p */
 .wrap #account {}
@@ -33,21 +36,25 @@
     width:410px;
     background-color:#B0C4DE;
     border:1px solid #383969;
-    padding-left:20px;
+    padding:15px 20px;
+    /* padding-left:20px;
     padding-right:20px;
     padding-top:15px;
-    padding-bottom:15px;
+    padding-bottom:15px; */
     border-radius:5px;
-    margin-top:25px;
-    margin-bottom:60px;
+    margin:25px 0 60px 0;
+    /* margin-top:25px;
+    margin-bottom:60px; */
 }
 .wrap #account p #login_btn {
     background-color:#42488E; color:#fff;
     width:410px;
-    padding-top:15px;
-    padding-bottom:15px;
-    margin-top:20px;
-    margin-bottom:10px;
+    padding:15px 0;
+    margin:20px 0 10px 0;
+    /* padding-top:15px;
+    padding-bottom:15px; */
+    /* margin-top:20px;
+    margin-bottom:10px; */
     border:1px solid #383969;
     border-radius:5px;
     font-size:0.875rem;
@@ -57,8 +64,9 @@
     text-align:center;
     background-color:#fff;
     width:410px;
-    padding-top:15px;
-    padding-bottom:15px;
+    padding:15px 0;
+    /* padding-top:15px;
+    padding-bottom:15px; */
     border:1px solid #383969;
     border-radius:5px;
     display:inline-block;
@@ -66,7 +74,8 @@
     font-weight:500;
 }
 .wrap #account+p {
-    margin-top:20px;
+    margin:20px 0 0 0;
+    /* margin-top:20px; */
     font-size:0.75rem;
     font-weight:400;
     text-align:center;
