--- a/css_basic/styles/flex1.css
+++ b/css_basic/styles/flex1.css
@@ -1,7 +1,6 @@
 /* flex1.css */
 .wrap1 {
     background-color:lightgray;
-    text-align:center;
     display:flex;
     /* flex-direction:row; *//* container 작성하는 메인축정렬방법 */
     /* flex-wrap:nowrap; *//* container의 item 줄바꿈처리 */
@@ -11,9 +10,33 @@
 }
 .wrap1 li {
     width:100px; height:100px; font-size:3rem;
-    line-height:100px;
 }
 .wrap1 li:nth-child(odd) {background-color:aqua;}
 .wrap1 li:nth-child(even) {background-color:yellow;}
 /* .wrap1 li:nth-child(3) {background-color:coral;}
 .wrap1 li:nth-child(4) {background-color:lime;} */
+/* ===flex2일차 연습 */
+.wrap2 {
+    background-color:#eee;
+    width:90%; margin:30px auto 0; padding:20px; height:600px;
+    display:flex;/* 방향, 줄바꿈 기본값: row, nowrap 기본값이어도 구분목적으로 작성을 하기도 한다. */
+    flex-flow:row nowrap;
+    /* 교차축이 2줄 이상일 떄 정렬 방법 (flex-wrap:wrap;기준 */
+    /* align-content:center; */
+    /* 교차축이 1줄 이상일 때 정렬 방법 (flex-wrap:nowrap;기준 */
+    align-items:center;
+}
+.wrap2 li {
+    flex:1;
+    /* width:150px; */ height:150px; color:#fff; font-size:5rem;
+}
+.wrap2 li:nth-child(odd) {background-color:purple;}
+.wrap2 li:nth-child(even) {background-color:hotpink;}
+.wrap2 li:nth-child(1) {order:5;}
+.wrap2 li:nth-child(2) {order:4;}
+.wrap2 li:nth-child(3) {order:6;}
+.wrap2 li:nth-child(4) {order:3;}
+.wrap2 li:nth-child(5) {order:0;}
+.wrap2 li:nth-child(6) {order:1; flex:2;}
+.wrap2 li:nth-child(7) {order:-1; align-self:flex-end;}
+.wrap2 li:nth-child(8) {order:2;}
