--- a/html_level2/animation/3-1-private/styles/desktop.css
+++ b/html_level2/animation/3-1-private/styles/desktop.css
@@ -29,6 +29,23 @@ main {
     top: 80px;
     text-align: center;
 }
+/* 좌/우 끊긴 배경 자연스럽게 처리하기 */
+main::before {
+    content:''; display:block;
+    width:50%; height:100%;
+    position:absolute;
+    left:0; top:0;
+    background:linear-gradient(90deg,rgb(9,13,43), transparent);
+    z-index:20;
+}
+main::after {
+    content:''; display:block;
+    width:50%; height:100%;
+    position:absolute;
+    right:0; top:0;
+    background:linear-gradient(-90deg,rgb(9,13,43), transparent);
+    z-index:20;
+}
 main > * {max-width:1400px; margin:0 auto;}
 /* 중첩순서 처리 배경(10) 그라디언트(20) 나머지(30) */
 main .bg_wrap {position:absolute; z-index:10;}
@@ -62,7 +79,7 @@ main .car {margin-top:150px; text-align:center; width:600px;}
 main .car #car {width:100%;}
 main .car #left_tire, main .car #right_tire {
     position:absolute; bottom:25px; width:67px;
-    animation: wheels 20ms linear infinite both;
+    animation: wheels 1s linear infinite;
 }
 main .car #left_tire {left:102px;}
 main .car #right_tire {right:91px;}
